[gd_scene load_steps=38 format=3 uid="uid://drucucpsarro8"]

[ext_resource type="Script" uid="uid://c8p7n4cif6ue7" path="res://scripts/Menu/lobby_room.gd" id="1_gfw6i"]
[ext_resource type="VideoStream" uid="uid://bfrassi24xuss" path="res://assets/sources/background.ogv" id="2_7ju5v"]
[ext_resource type="Texture2D" uid="uid://djbea4m2qkck4" path="res://assets/BACK.png" id="3_5133s"]
[ext_resource type="FontFile" uid="uid://b7ua41mspaxmj" path="res://data/LilitaOne-Regular.ttf" id="4_bff1k"]
[ext_resource type="Texture2D" uid="uid://cgqx5m2srf067" path="res://assets/Players/PLAYER.png" id="5_is051"]
[ext_resource type="Texture2D" uid="uid://cglcyl6tbel17" path="res://assets/Token/TOKEN-1.png" id="6_lysqt"]
[ext_resource type="Texture2D" uid="uid://cwc2ug4keewgq" path="res://assets/edit.png" id="7_unnp8"]
[ext_resource type="Texture2D" uid="uid://dncppny3wuhm4" path="res://assets/PLUS.png" id="8_217gt"]
[ext_resource type="Texture2D" uid="uid://ddkqps3evmvgy" path="res://assets/Token/TOKEN-2.png" id="8_is051"]
[ext_resource type="Texture2D" uid="uid://cmw3h4iksi8ex" path="res://assets/cancel.png" id="8_vjysv"]
[ext_resource type="Texture2D" uid="uid://btj0ua5klp1ed" path="res://assets/PLUS-1.png" id="9_8ijah"]
[ext_resource type="Texture2D" uid="uid://b7eoun1g84iw2" path="res://assets/Lobby1.png" id="10_8abp8"]
[ext_resource type="Texture2D" uid="uid://bu2oceabbd5id" path="res://assets/Token/TOKEN-3.png" id="10_lysqt"]
[ext_resource type="Texture2D" uid="uid://bx4vkn031pdsj" path="res://assets/Token/TOKEN.png" id="11_unnp8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lfnhy"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_306rh"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tdqe"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dpevi"]
bg_color = Color(0.686275, 0.321569, 0.870588, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pamqj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chkoo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1m0en"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ju5v"]
bg_color = Color(0.196078, 0.678431, 0.901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5133s"]
bg_color = Color(1, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bff1k"]
bg_color = Color(0.203922, 0.780392, 0.34902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gry0s"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7htu"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4y7f0"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtvvq"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afsdv"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xcaqq"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_left = 14
border_width_top = 14
border_width_right = 14
border_width_bottom = 14
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ijah"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8abp8"]
bg_color = Color(0.698039, 0.4, 0.258824, 1)
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbq30"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
border_width_right = 7
border_width_bottom = 7
border_color = Color(0.247059, 0.0941176, 0.00392157, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_is051"]
bg_color = Color(0.384314, 0.129412, 0.00392157, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lysqt"]
bg_color = Color(0.478431, 0.294118, 0.207843, 0.796078)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_color = Color(0, 0, 0, 0.517647)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_unnp8"]
bg_color = Color(0.227613, 0.906696, 0.959497, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_217gt"]
bg_color = Color(0.0941176, 0.752941, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.00392157, 0.321569, 0.345098, 1)
corner_radius_top_left = 60
corner_radius_top_right = 60
corner_radius_bottom_right = 60
corner_radius_bottom_left = 60
shadow_color = Color(0, 0, 0, 0.431373)
shadow_size = 1
shadow_offset = Vector2(2, 3)

[node name="Lobyy_Wait" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gfw6i")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1330.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_7ju5v")
autoplay = true
expand = true
loop = true

[node name="TextureRect" type="Control" parent="."]
anchors_preset = 0
offset_right = 1330.0
offset_bottom = 800.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_right = 1330.0
offset_bottom = 117.0
color = Color(0.384314, 0.129412, 0.00784314, 1)

[node name="TextureButton" type="TextureButton" parent="TextureRect/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.019
anchor_top = 0.128
anchor_right = 0.086
anchor_bottom = 0.735
offset_left = -4.0
offset_top = 0.0239992
offset_bottom = 0.00499725
grow_vertical = 2
texture_normal = ExtResource("3_5133s")

[node name="MenuButton" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.004
offset_left = 1035.0
offset_top = 120.0
offset_right = 1345.68
offset_bottom = 224.0
scale = Vector2(0.8, 0.8)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_lfnhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_306rh")
theme_override_styles/normal = SubResource("StyleBoxFlat_7tdqe")
text = "  LOBBY         â–¼"
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037594
anchor_top = 0.2575
anchor_right = 0.951128
anchor_bottom = 0.8825
offset_left = -3.49988
offset_right = 33.4999
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Traveler1" type="TextureRect" parent="TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="Player" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler1"]
position = Vector2(148, 274)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_is051")

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/Traveler1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108159
anchor_top = 0.21
anchor_right = 0.822865
anchor_bottom = 0.3216
offset_right = 27.0
offset_bottom = 6.2
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_dpevi")
text = "TravelerName1"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Token-1" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler1"]
position = Vector2(149, 344)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_lysqt")

[node name="edit" type="Button" parent="TextureRect/HBoxContainer/Traveler1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.632353
anchor_top = 0.368
anchor_right = 0.844118
anchor_bottom = 0.512
offset_right = -16.0
offset_bottom = -16.0
theme_override_styles/hover = SubResource("StyleBoxFlat_pamqj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_chkoo")
theme_override_styles/normal = SubResource("StyleBoxFlat_1m0en")
icon = ExtResource("7_unnp8")
metadata/_edit_use_anchors_ = true

[node name="Traveler2" type="TextureRect" parent="TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="Player" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler2"]
position = Vector2(148, 274)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_is051")

[node name="Token-2" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler2"]
position = Vector2(149.5, 342)
scale = Vector2(0.8, 0.8)
texture = ExtResource("8_is051")

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/Traveler2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108159
anchor_top = 0.21
anchor_right = 0.822865
anchor_bottom = 0.3216
offset_right = 27.0
offset_bottom = 6.2
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_7ju5v")
text = "TravelerName2"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="cancel2" type="Button" parent="TextureRect/HBoxContainer/Traveler2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.809677
anchor_top = 0.112
anchor_right = 0.999355
anchor_bottom = 0.2296
offset_right = 39.2
offset_bottom = 39.2
scale = Vector2(0.6, 0.6)
theme_override_styles/hover = SubResource("StyleBoxFlat_pamqj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_chkoo")
theme_override_styles/normal = SubResource("StyleBoxFlat_1m0en")
icon = ExtResource("8_vjysv")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Traveler3" type="TextureRect" parent="TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="Player" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler3"]
position = Vector2(148, 274)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_is051")

[node name="Token-3" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler3"]
position = Vector2(147.5, 333)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_lysqt")

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/Traveler3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108159
anchor_top = 0.21
anchor_right = 0.822865
anchor_bottom = 0.3216
offset_right = 27.0
offset_bottom = 6.2
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_5133s")
text = "TravelerName3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="cancel3" type="Button" parent="TextureRect/HBoxContainer/Traveler3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.809677
anchor_top = 0.112
anchor_right = 0.999355
anchor_bottom = 0.2296
offset_right = 39.2
offset_bottom = 39.2
scale = Vector2(0.6, 0.6)
theme_override_styles/hover = SubResource("StyleBoxFlat_pamqj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_chkoo")
theme_override_styles/normal = SubResource("StyleBoxFlat_1m0en")
icon = ExtResource("8_vjysv")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Traveler4" type="TextureRect" parent="TextureRect/HBoxContainer"]
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="Player" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler4"]
position = Vector2(148, 274)
scale = Vector2(0.9, 0.9)
texture = ExtResource("5_is051")

[node name="Token" type="Sprite2D" parent="TextureRect/HBoxContainer/Traveler4"]
position = Vector2(108.5, 375)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_unnp8")

[node name="Label" type="Label" parent="TextureRect/HBoxContainer/Traveler4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.108159
anchor_top = 0.21
anchor_right = 0.822865
anchor_bottom = 0.3216
offset_right = 27.0
offset_bottom = 6.2
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_bff1k")
text = "TravelerName4"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="cancel4" type="Button" parent="TextureRect/HBoxContainer/Traveler4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.809677
anchor_top = 0.112
anchor_right = 0.999355
anchor_bottom = 0.2296
offset_right = 39.2
offset_bottom = 39.2
scale = Vector2(0.6, 0.6)
theme_override_styles/hover = SubResource("StyleBoxFlat_pamqj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_chkoo")
theme_override_styles/normal = SubResource("StyleBoxFlat_1m0en")
icon = ExtResource("8_vjysv")
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Traveler5" type="TextureRect" parent="TextureRect/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="invite2" type="TextureButton" parent="TextureRect/HBoxContainer/Traveler5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_217gt")
texture_pressed = ExtResource("9_8ijah")
texture_hover = ExtResource("9_8ijah")
stretch_mode = 3

[node name="Traveler6" type="TextureRect" parent="TextureRect/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="invite3" type="TextureButton" parent="TextureRect/HBoxContainer/Traveler6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_217gt")
texture_pressed = ExtResource("9_8ijah")
texture_hover = ExtResource("9_8ijah")
stretch_mode = 3

[node name="Traveler7" type="TextureRect" parent="TextureRect/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(310, 0)
layout_direction = 2
layout_mode = 2

[node name="invite4" type="TextureButton" parent="TextureRect/HBoxContainer/Traveler7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_217gt")
texture_pressed = ExtResource("9_8ijah")
texture_hover = ExtResource("9_8ijah")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
visible = false
custom_minimum_size = Vector2(3, 0)
layout_mode = 0
offset_left = 1055.0
offset_top = 200.0
offset_right = 2495.0
offset_bottom = 970.0
scale = Vector2(0.15, 0.15)

[node name="Parties publiques" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(1400, 350)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_gry0s")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_lfnhy")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o7htu")
theme_override_styles/normal = SubResource("StyleBoxFlat_4y7f0")
text = "#479816"

[node name="Parties privees" type="Button" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(1400, 350)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 200
theme_override_styles/hover = SubResource("StyleBoxFlat_gtvvq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_afsdv")
theme_override_styles/normal = SubResource("StyleBoxFlat_xcaqq")
text = "888888"
autowrap_mode = 3

[node name="start" type="Button" parent="TextureRect"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -318.0
offset_top = 280.0
offset_right = -73.0
offset_bottom = 374.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_8ijah")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8abp8")
theme_override_styles/normal = SubResource("StyleBoxFlat_mbq30")
text = "START"
icon_alignment = 2
expand_icon = true

[node name="OverlayMask" type="Control" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="Panel" parent="TextureRect"]
visible = false
offset_left = 413.0
offset_top = 224.0
offset_right = 1409.0
offset_bottom = 942.0
scale = Vector2(0.5, 0.5)
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_is051")

[node name="Panel" type="Panel" parent="TextureRect/MarginContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.059
anchor_top = 0.0571429
anchor_right = 0.959
anchor_bottom = 0.957143
offset_left = -23.764
offset_top = -1.0286
offset_right = 55.836
offset_bottom = 72.7713
scale = Vector2(0.95, 0.9)
theme_override_styles/panel = SubResource("StyleBoxFlat_lysqt")

[node name="Partie_1" type="NinePatchRect" parent="TextureRect/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0860656
anchor_top = 0.0555556
anchor_right = 0.923156
anchor_bottom = 0.826389
offset_left = -3.00006
offset_top = -3.05176e-05
offset_right = -3.00006
offset_bottom = 0.999969
texture = ExtResource("10_8abp8")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0839695
anchor_top = 0.116667
anchor_right = 0.877863
anchor_bottom = 0.261111
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 60
text = "Partie de SachAtlantis"
metadata/_edit_use_anchors_ = true

[node name="Label3" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0850995
anchor_top = 0.28777
anchor_right = 0.504947
anchor_bottom = 0.421103
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 60
text = "Joueurs: 4"
metadata/_edit_use_anchors_ = true

[node name="Inviter" type="Button" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275784
anchor_top = 0.899281
anchor_right = 0.726269
anchor_bottom = 1.1457
offset_right = 92.0116
offset_bottom = 34.2516
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover = SubResource("StyleBoxFlat_unnp8")
theme_override_styles/normal = SubResource("StyleBoxFlat_217gt")
text = " Inviter"
metadata/_edit_use_anchors_ = true

[node name="Label4" type="Label" parent="TextureRect/MarginContainer/Panel/Partie_1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0850995
anchor_top = 0.48761
anchor_right = 0.504947
anchor_bottom = 0.744804
offset_bottom = -68.8669
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bff1k")
theme_override_font_sizes/font_size = 60
text = "#479816
888888"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="TextureRect/ColorRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureRect/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler1/edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler2/cancel2" to="." method="_on_cancel_2_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler3/cancel3" to="." method="_on_cancel_3_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler4/cancel4" to="." method="_on_cancel_4_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler5/invite2" to="." method="_on_invite_2_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler6/invite3" to="." method="_on_invite_3_pressed"]
[connection signal="pressed" from="TextureRect/HBoxContainer/Traveler7/invite4" to="." method="_on_invite_4_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Parties publiques" to="." method="_on_parties_publiques_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Parties privees" to="." method="_on_parties_privees_pressed"]
[connection signal="pressed" from="TextureRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="TextureRect/MarginContainer/Panel/Partie_1/Inviter" to="." method="_on_inviter_pressed"]
